# sat-metropolis

./: .git-mirror  LICENSE  README.md  environment.yml  pyproject.toml
experiments/: books_results_case_12_rf_1_bits_10_max_int_255.csv  books_results_case_27_rf_1_bits_10_max_int_255.csv  books_results_case_27_rf_4_bits_8_max_int_63.csv  books_results_case_42_rf_1_bits_10_max_int_255.csv  experiments.ipynb  roads_results_con_2_rf_1_bits_11_max_int_1023.csv  roads_results_con_3_rf_4_bits_9_max_int_127.csv  roads_results_con_4_rf_1_bits_11_max_int_511.csv  roads_results_con_4_rf_3_bits_9_max_int_127.csv  roads_results_con_5_rf_1_bits_11_max_int_255.csv  roads_results_con_5_rf_3_bits_9_max_int_127.csv  roads_results_con_6_rf_1_bits_11_max_int_255.csv  roads_results_con_7_rf_2_bits_10_max_int_127.csv  roads_results_con_7_rf_3_bits_9_max_int_63.csv  roads_results_con_7_rf_4_bits_9_max_int_63.csv  roads_results_con_7_rf_7_bits_7_max_int_31.csv  roads_results_con_7_rf_7_bits_8_max_int_31.csv
experiments/cnf_files/: books_cnf_case_12_rf_1.cnf  books_cnf_case_12_rf_2.cnf  books_cnf_case_12_rf_3.cnf  books_cnf_case_12_rf_4.cnf  books_cnf_case_27_rf_1.cnf  books_cnf_case_27_rf_2.cnf  books_cnf_case_27_rf_3.cnf  books_cnf_case_27_rf_4.cnf  books_cnf_case_42_rf_1.cnf  books_cnf_case_42_rf_2.cnf  books_cnf_case_42_rf_3.cnf  books_cnf_case_42_rf_4.cnf  roads_cnf_con_2_rf_1.cnf  roads_cnf_con_2_rf_2.cnf  roads_cnf_con_2_rf_3.cnf  roads_cnf_con_2_rf_4.cnf  roads_cnf_con_3_rf_1.cnf  roads_cnf_con_3_rf_2.cnf  roads_cnf_con_3_rf_3.cnf  roads_cnf_con_3_rf_4.cnf  roads_cnf_con_4_rf_1.cnf  (+15 more)
(+328 files in other folders)
